// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o2"
        id="_r_0_"
        name="testing"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_0_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="styles__9pjq8o2"
        id="_r_f_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_f_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly checked and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="true"
      class="styles__9pjq8o1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="styles__9pjq8o2"
        disabled=""
        id="_r_p_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_p_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly checked with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="styles__9pjq8o2"
        id="_r_i_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_i_"
          >
            Checkbox Label
          </label>
        </div>
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_27__m4c9ow26"
        >
          helper
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="true"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o2"
        disabled=""
        id="_r_5_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_5_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly indeterminate 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="indeterminate"
      data-error="false"
    >
      <input
        aria-checked="mixed"
        aria-invalid="false"
        class="styles__9pjq8o2"
        id="_r_m_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            class="styles__9pjq8o6"
            height="2"
            rx="1"
            width="12"
            x="6"
            y="11"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_m_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly indeterminate and disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="true"
      class="styles__9pjq8o1"
      data-checked="indeterminate"
      data-error="false"
    >
      <input
        aria-checked="mixed"
        aria-invalid="false"
        class="styles__9pjq8o2"
        disabled=""
        id="_r_s_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            class="styles__9pjq8o6"
            height="2"
            rx="1"
            width="12"
            x="6"
            y="11"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_s_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly invisible 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="false"
      data-visibility="true"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o2"
        id="_r_v_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_v_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly no child 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        aria-label="check"
        class="styles__9pjq8o2"
        id="_r_3_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o2"
        id="_r_8_"
        required=""
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_8_"
          >
            Checkbox Label
          </label>
          <sup
            class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_8__m4c9ow1n"
          >
            *
          </sup>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with a value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="styles__9pjq8o2"
        id="_r_16_"
        type="checkbox"
        value="test"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_16_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with an error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-checked="false"
        aria-describedby="_r_12_-hint"
        aria-invalid="true"
        class="styles__9pjq8o2"
        id="_r_12_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            class="styles__9pjq8o5"
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_12_"
          >
            Checkbox Label
          </label>
        </div>
        <span
          class="styles__9pjq8o0 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1n"
        >
          test error
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-disabled="false"
      class="styles__9pjq8o1"
      data-checked="indeterminate"
      data-error="false"
    >
      <input
        aria-checked="mixed"
        aria-invalid="false"
        class="styles__9pjq8o2"
        id="_r_19_"
        type="checkbox"
      />
      <svg
        class="styles__9pjq8o3"
        fill="none"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="styles__9pjq8o4"
            height="16"
            rx="0.125rem"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            class="styles__9pjq8o6"
            height="2"
            rx="1"
            width="12"
            x="6"
            y="11"
          />
        </g>
      </svg>
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
        style="--_4k0ekn3: 1;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <label
            class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
            for="_r_19_"
          >
            Checkbox Label
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_d_"
      aria-describedby="_r_d_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        aria-disabled="false"
        class="styles__9pjq8o1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="styles__9pjq8o2"
          id="_r_c_"
          type="checkbox"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn3: 1;"
          >
            <label
              class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              for="_r_c_"
            >
              Checkbox Label
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
